# Esphome-c--spi

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  esphome_client  fake_device  fake_esphome_device  update_protos.sh
examples/: esp32_client.c  linux_client.c
include/: esphome_api.h  esphome_messages.h  esphome_noise.h  esphome_transport.h
proto/: esphome_api.options  esphome_api.proto
src/: crypto_fake.h  fake_device.c  main.c  proto_helpers.c
src/api/: entity_registry.c  esphome_api.c  frame.c  proto_helpers.c
src/noise/: noise.c
src/proto/: api.pb.c  api.pb.h  api.proto  api_encryption.pb.c  api_encryption.pb.h  api_message.pb.c  api_message.pb.h  api_options.pb.c  api_options.pb.h  api_options.proto  api_service.pb.c  api_service.pb.h  api_service.proto  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
src/protobuf/: messages.c
src/transport/: transport.c
